--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "firebase": "^9.18.0",
+    "firebase-auth": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -19,7 +20,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "eslint --fix . && PORT=3002 react-scripts start",
+    "start": "PORT=3002 react-scripts start",
     "build": "react-scripts build -o my-output-dir",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
