--- a/package.json
+++ b/package.json
@@ -69,9 +69,12 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "dotenv-webpack": "^8.0.1",
-    "eslint": "^8.36.0",
+    "eslint": "^8.42.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^27.5.1",
     "prettier": "2.8.7",
     "webpack-cli": "^5.0.1"
