--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@flaticon/flaticon-uicons": "^2.0.1",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.13.4",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/d3-sankey": "^0.12.1",
@@ -19,6 +22,7 @@
     "d3-sankey": "^0.12.3",
     "firebase": "^9.18.0",
     "firebase-auth": "^0.1.2",
+    "image-compression": "^0.0.6",
     "normalize.css": "^8.0.1",
     "primeicons": "^6.0.1",
     "primeng": "^15.3.0",
@@ -27,6 +31,7 @@
     "react-flow-renderer": "^10.3.17",
     "react-google-charts": "^4.0.0",
     "react-icons": "^4.8.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
