--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/d3-sankey": "^0.12.1",
+    "@types/file-saver": "^2.0.5",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.19",
     "@types/react": "^18.0.28",
@@ -20,9 +21,11 @@
     "antd": "^5.4.7",
     "d3": "^7.8.4",
     "d3-sankey": "^0.12.3",
+    "file-saver": "^2.0.5",
     "firebase": "^9.18.0",
     "firebase-auth": "^0.1.2",
     "image-compression": "^0.0.6",
+    "jszip": "^3.10.1",
     "normalize.css": "^8.0.1",
     "primeicons": "^6.0.1",
     "primeng": "^15.3.0",
