Updated .gitignore and cleared cached files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
-node_modules
-.firebase/hosting.YnVpbGQ.cache
+# Dependency directory
+node_modules/
+
+# Firebase cache
+.firebase/
+
+# Build directory
+build/
+
+# Logs
+npm-debug.log*
+
+# Editor directories and files
+.DS_Store
+*.sublime*
+.vscode/
+*.swp
+*.swo
+*.idea/
+
+# Environment variables
+.env
+
+# Other
+*.cache
+*.lock
