batch updates : Product Manager

--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "antd": "^5.4.7",
+    "browser-image-compression": "^2.0.2",
     "d3": "^7.8.4",
     "d3-sankey": "^0.12.3",
     "file-saver": "^2.0.5",
     "firebase": "^9.18.0",
     "firebase-auth": "^0.1.2",
+    "heic2any": "^0.0.4",
     "image-compression": "^0.0.6",
     "image-compressor": "^2.0.3",
+    "image-conversion": "^2.1.1",
     "jszip": "^3.10.1",
     "normalize.css": "^8.0.1",
+    "pica": "^9.0.1",
     "primeicons": "^6.0.1",
     "primeng": "^15.3.0",
     "qrcode": "^1.5.3",
@@ -49,6 +53,7 @@
     "styled-reset": "^4.4.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
+    "webp-converter": "^2.3.3",
     "workbox-core": "^7.0.0"
   },
   "scripts": {
@@ -79,6 +84,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/pica": "^9.0.3",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
